tests/snapshots/new__atcoder_abc003_output.snap
---
source: tests/new.rs
expression: output
---
     Created `abc003` package at {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc003
       Saved 2 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc003{{ slash_or_backslash }}testcases{{ slash_or_backslash }}a.yml
       Saved 3 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc003{{ slash_or_backslash }}testcases{{ slash_or_backslash }}b.yml
       Saved 3 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc003{{ slash_or_backslash }}testcases{{ slash_or_backslash }}c.yml
       Saved 4 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc003{{ slash_or_backslash }}testcases{{ slash_or_backslash }}d.yml

