tests/snapshots/new__atcoder_abc007_file_tree.snap
---
source: tests/new.rs
expression: tree
---
{
  ".cargo": {
    "config.toml": "[cargo-new]\nname = \"\"\nemail = \"\"\n"
  },
  "abc007": {
    "Cargo.toml": "[package]\nname = \"abc007\"\nversion = \"0.1.0\"\nauthors = [\"\"]\nedition = \"2018\"\n\n[package.metadata.cargo-compete]\nconfig = \"../compete.toml\"\n\n[package.metadata.cargo-compete.bin]\na = { name = \"abc007-a\", problem = { platform = \"atcoder\", contest = \"abc007\", index = \"A\", url = \"https://atcoder.jp/contests/abc007/tasks/abc007_1\" } }\nb = { name = \"abc007-b\", problem = { platform = \"atcoder\", contest = \"abc007\", index = \"B\", url = \"https://atcoder.jp/contests/abc007/tasks/abc007_2\" } }\nc = { name = \"abc007-c\", problem = { platform = \"atcoder\", contest = \"abc007\", index = \"C\", url = \"https://atcoder.jp/contests/abc007/tasks/abc007_3\" } }\nd = { name = \"abc007-d\", problem = { platform = \"atcoder\", contest = \"abc007\", index = \"D\", url = \"https://atcoder.jp/contests/abc007/tasks/abc007_4\" } }\n\n[[bin]]\nname = \"abc007-a\"\npath = \"src/bin/a.rs\"\n\n[[bin]]\nname = \"abc007-b\"\npath = \"src/bin/b.rs\"\n\n[[bin]]\nname = \"abc007-c\"\npath = \"src/bin/c.rs\"\n\n[[bin]]\nname = \"abc007-d\"\npath = \"src/bin/d.rs\"\n[dependencies]\nproconio = \"=0.3.6\"\n",
    "src": {
      "bin": {
        "a.rs": "fn main() {\n    todo!();\n}\n",
        "b.rs": "fn main() {\n    todo!();\n}\n",
        "c.rs": "fn main() {\n    todo!();\n}\n",
        "d.rs": "fn main() {\n    todo!();\n}\n"
      }
    },
    "testcases": {
      "a.yml": "---\ntype: Batch\ntimelimit: 2s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      4\n    out: |\n      3\n  - name: sample2\n    in: |\n      100\n    out: |\n      99\n  - name: sample3\n    in: |\n      1\n    out: |\n      0\n\nextend: []\n",
      "b.yml": "---\ntype: Batch\ntimelimit: 2s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      xyz\n    out: |\n      xy\n  - name: sample2\n    in: |\n      c\n    out: |\n      b\n  - name: sample3\n    in: |\n      a\n    out: |\n      -1\n  - name: sample4\n    in: |\n      aaaaa\n    out: |\n      aaaa\n\nextend: []\n",
      "c.yml": "---\ntype: Batch\ntimelimit: 2s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      7 8\n      2 2\n      4 5\n      ########\n      #......#\n      #.######\n      #..#...#\n      #..##..#\n      ##.....#\n      ########\n    out: |\n      11\n  - name: sample2\n    in: |\n      5 8\n      2 2\n      2 4\n      ########\n      #.#....#\n      #.###..#\n      #......#\n      ########\n    out: |\n      10\n  - name: sample3\n    in: |\n      50 50\n      2 2\n      49 49\n      ##################################################\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      #................................................#\n      ##################################################\n    out: |\n      94\n\nextend: []\n",
      "d.yml": "---\ntype: Batch\ntimelimit: 2s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      1 9\n    out: |\n      2\n  - name: sample2\n    in: |\n      40 49\n    out: |\n      10\n  - name: sample3\n    in: |\n      1 1000\n    out: |\n      488\n  - name: sample4\n    in: |\n      1 1000000000000000000\n    out: |\n      981985601490518016\n\nextend: []\n"
    }
  },
  "compete.toml": "test-suite = \"{{ manifest_dir }}/testcases/{{ problem | kebabcase }}.yml\"\n\n[new]\nplatform = \"atcoder\"\npath = \"./{{ package_name }}\"\n\n[new.template]\ntarget-dir = \"./target\"\n\n[new.template.dependencies]\nkind = \"inline\"\ncontent = '''\nproconio = \"=0.3.6\"\n'''\n\n[new.template.src]\nkind = \"inline\"\ncontent = '''\nfn main() {\n    todo!();\n}\n'''\n"
}
