tests/snapshots/new__atcoder_abc007_output.snap
---
source: tests/new.rs
expression: output
---
     Created `abc007` package at {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc007
       Saved 3 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc007{{ slash_or_backslash }}testcases{{ slash_or_backslash }}a.yml
       Saved 4 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc007{{ slash_or_backslash }}testcases{{ slash_or_backslash }}b.yml
       Saved 3 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc007{{ slash_or_backslash }}testcases{{ slash_or_backslash }}c.yml
       Saved 4 test cases to {{ cwd }}{{ slash_or_backslash }}.{{ slash_or_backslash }}abc007{{ slash_or_backslash }}testcases{{ slash_or_backslash }}d.yml

